Deployment_files/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
spec:
  selector:
    matchLabels:
      name: mongo-deployment
  replicas: 1
  template:
    metadata:
      name: mongo-deployment
      labels:
        name: mongo-deployment
    spec:
      containers:
        - name: mongodb
          image: mongo:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 27017
