Deployment_files/timesheet-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: timesheet-service
  labels:
    name: timesheet-service
spec:
  selector:
    name: timesheet-deployment
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
