Deployment_files/Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - akankshakumari.xyz
    secretName: tls-backend
  rules:
    - host: "api.akankshakumari.xyz"
      http:
        paths:
          - path: /mongo-api
            backend:                         
              serviceName: timesheet-service    
              servicePort: 8080
